@@ -135,8 +135,10 @@ LIBRPMIO_0
     lzdio;
     max_macro_depth;
     _mire_debug;
+    mireApply;
     mireClean;
     mireFree;
+    mireFreeAll;
     mireNew;
     mireRegexec;
     mireRegcomp;
